# flit-scm-demo

./: .envrc  .gitignore  README.md  pyproject.toml
demo/: __init__.py
flit_scm_backend/: flit_scm_backend.py
